--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.15s ease;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
   background: #131313;
+  
 }
