--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,34 @@ body, #root  {
   min-height: 100vh;
 }
 
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+      scale: 0.9;
+  }
+  to {
+      opacity: 1;
+      scale: 1;
+  }
+}
+@keyframes fadeOut {
+  from {
+      opacity: 1;
+      scale: 1;
+  }
+  to {
+      opacity: 0;
+      scale: 0.9;
+  }
+}
+
+.TouchableBlur {
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.TouchableBlur:hover {
+  filter: blur(1px);
+}
